# alexshell

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cache/: versions.json
scripts/: add_tool.sh  build_site.py  check_updates.py  launch.sh  picker.sh  preview_help.py  recheck_discarded.py  tmux.conf  watch_help.sh
site/: discarded.html  index.html
site/tool/: aria2.html  bandwhich.html  bat.html  fd.html  glow.html  havn.html  helix.html  lnav.html  netop.html  ripgrep.html  rustscan.html
templates/: base.html  discarded.html  index.html  tool.html
templates/static/: style.css
tools/active/: aria2.yaml  bandwhich.yaml  bat.yaml  fd.yaml  glow.yaml  havn.yaml  helix.yaml  lnav.yaml  netop.yaml  ripgrep.yaml  rustscan.yaml
tools/discarded/: example.yaml
