[project]
name = "alexshell"
version = "0.1.0"
description = "Curated personal CLI tool index — YAML manifests, static site, tmux/fzf launcher, GitHub release update checker"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alessandro Middei", email = "alessandro.middei@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "requests>=2.31",
  "markdown>=3.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
